# fastdb

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
public/: index.html
src/: App.js  App_optimized.js  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  credentials.rs  db.rs  db_optimized.rs  lib.rs  main.rs  postgres.rs  schema.rs
src/components/: LeftPanel.js  LeftPanelFixed.js  QueryEditor.js  QueryHistory.js  ResultViewer.js  RightPanel.js
src/components/__tests__/: QueryEditor.test.js  QueryHistory.test.js  ResultViewer.test.js  RightPanel.test.js
src/test/: setup.js
