[package]
name = "fastdb"
version = "0.2.0"
description = "A fast PostgreSQL query tool"
authors = ["Andrew Gill"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = [] }
tokio = { version = "1.43", features = ["rt-multi-thread", "macros", "time", "fs", "io-util"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
deadpool-postgres = "0.14"
deadpool = "0.12"
bytes = "1.9"
futures-util = "0.3"
windows = { version = "0.58", features = ["Win32_Security_Credentials", "Win32_Foundation"] }
uuid = { version = "1.0", features = ["v4", "fast-rng"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = "6.0"
once_cell = "1.20"
tauri-plugin-dialog = "2"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `production` builds.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization, slower compile
strip = true           # Remove debug symbols
panic = "abort"        # Smaller binary
